# troubleshoot-mcp-server

./: .gitignore  .melange.yaml  CLAUDE.md  KNOWN_ISSUES.md  OPTION2_SSE_MIGRATION.md  PODMAN.md  PROTOCOL_ERROR_TESTING_REPORT.md  README.md  TEST_FIXES.md  apko.yaml  debug_fastmcp_lifecycle.py  debug_mcp_server.py  debug_mcp_test.py  debug_sbctl.py  pyproject.toml  pytest.ini  simple_mcp_test.py  test_bundle_loading.py  test_direct_bundle_manager.py  test_direct_mcp_tool.py  test_initialize_bundle_tool.py  test_mcp_communication.py  test_minimal_mcp.py  test_mock_audit_results.md  test_module_startup.py  test_production_server.py  test_sbctl_direct.py  test_simple_mcp.py
.claude/: settings.json
.github/: PULL_REQUEST_NOTES.md
.github/workflows/: README.md  pr-checks.yaml  publish-container.yaml  publish.yml
docs/: TESTING_STRATEGY.md  developer_guide.md  phase1-smart-restart.md  sbctl-manager-architecture.md
scripts/: build.sh  generate_test_keys.sh  run.sh  run_tests.sh
src/mcp_server_troubleshoot/: __main__.py  bundle.py  cli.py  formatters.py  kubectl.py  lifecycle.py  server.py  subprocess_utils.py
src/troubleshoot_mcp_server/: __init__.py  __main__.py  bundle.py  bundle.py.bak  cli.py  config.py  files.py  http_server.py  kubectl.py  lifecycle.py  server.py  size_limiter.py  subprocess_utils.py
tasks/active/: auto-start-sbctl.md  fix-asyncio-transport-python313.md  fix-container-name-conflicts.md  fix-container-shell-dependency-regression.md  fix-container-shutdown-race-condition.md  fix-github-sbctl-token-fallback.md  fix-transport-cleanup-and-curl-dependency.md  implement-comprehensive-testing-improvements.md  implement-single-bundle-mode.md  optimize-ci-coverage-eliminate-duplicate-tests.md  standardize-mcp-schemas.md
tasks/backlog/: add-preserve-option.md  audit-subprocess-dependencies.md  auto-start-sbctl.md  enhance-error-messages-for-file-directory-confusion.md  fix-asyncio-transport-python313.md  fix-container-name-conflicts.md  fix-container-shell-dependency-regression.md  fix-container-shutdown-race-condition.md  fix-github-sbctl-token-fallback.md  fix-stale-kubeconfig-port-on-sbctl-auto-restart.md  fix-transport-cleanup-and-curl-dependency.md  github-attachment-downloads.md  hide-list-bundles-tool.md  implement-comprehensive-testing-improvements.md  implement-free-pr-coverage-reporting.md  implement-host-command-discovery.md  implement-output-size-limits.md  implement-retry-logic-for-403-errors.md  implement-single-bundle-mode.md  improve-kubectl-robustness-against-sbctl-crashes.md  improve-mcp-functional-testing.md  improve-tool-descriptions-address-llm-failure-modes.md  investigate-mcp-protocol-test-failures.md  optimize-ci-coverage-eliminate-duplicate-tests.md  parallel-pytest-execution.md  reduce-excessive-context-usage.md  remove-packages-from-git-history.md  smart-file-reading-with-preview.md  standardize-mcp-schemas.md
tasks/completed/: add-preserve-option.md  audit-subprocess-dependencies.md  bundle-cleanup.md  enhance-error-messages-for-file-directory-confusion.md  fix-asyncio-transport-python313.md  fix-container-name-conflicts.md  fix-container-shutdown-race-condition.md  fix-stale-kubeconfig-port-on-sbctl-auto-restart.md  fix-transport-cleanup-and-curl-dependency.md  github-attachment-downloads.md  hide-list-bundles-tool.md  implement-comprehensive-mcp-testing.md  implement-comprehensive-testing-improvements.md  implement-free-pr-coverage-reporting.md  implement-output-size-limits.md  implement-retry-logic-for-403-errors.md  improve-mcp-functional-testing.md  improve-tool-descriptions-address-llm-failure-modes.md  investigate-mcp-protocol-test-failures.md  list-bundles-tool.md  mcp-config.md  optimize-grep-files-token-usage.md  optimize-kubectl-response-formatting.md  optimize-mcp-token-usage.md  replicated-vp.md  switch-to-melange-apko-build.md  task-1-project-setup.md  task-2-bundle-manager.md  task-3-command-executor.md  task-4-file-explorer.md
tests/: README.md  conftest.py
tests/e2e/: test_build_reliability.py  test_container_bundle_validation.py  test_container_production_validation.py  test_container_shutdown_reliability.py  test_direct_tool_integration.py  test_mcp_protocol_integration.py  test_non_container.py  test_podman.py
tests/fixtures/: INVESTIGATION.md  mock_kubectl.py  mock_sbctl.py
tests/functional/: __init__.py  conftest.py  test_bundle_lifecycle.py  test_concurrent_access.py  test_error_scenarios.py  test_file_operations.py  test_kubectl_protocol.py  test_parallel_operations.py  test_tool_discovery.py
tests/integration/: conftest.py  mcp_test_utils.py  test_api_server_lifecycle.py  test_bundle_functional.py  test_cleanup_isolation.py  test_github_token_fallback.py  test_mcp_client_config.py  test_mcp_protocol_errors.py  test_mcp_protocol_real.py  test_real_bundle.py  test_sbctl_concurrent.py  test_server_lifecycle.py  test_shutdown_race_condition.py  test_signal_handling_integration.py  test_single_bundle_mode_stateless.py  test_subprocess_utilities_integration.py  test_tool_functions.py  test_url_fetch_auth.py
tests/test_utils/: __init__.py  bundle_helpers.py
tests/unit/: conftest.py  test_bundle.py  test_bundle_cleanup_dependencies.py  test_bundle_path_resolution.py  test_components.py  test_config.py  test_curl_dependency_reproduction.py  test_enhanced_error_messages.py  test_files.py  test_files_parametrized.py  test_fixes_integration.py  test_grep_fix.py  test_kubectl.py  (+12 more)
(+1 files in other folders)
