[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "troubleshoot-mcp-server"
version = "0.1.0"
description = "MCP server for Kubernetes support bundles"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies without unnecessary version constraints
    "mcp",
    "pydantic",
    "aiohttp",
    "fastapi",
    "uvicorn",
    "typer",
    "pyyaml",  # Required for kubeconfig parsing
    "psutil"   # Required for process management (replaces ps/pkill subprocess calls)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",  # Type stubs for PyYAML
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
troubleshoot_mcp_server = ["py.typed"]

[project.scripts]
troubleshoot-mcp-server = "troubleshoot_mcp_server.__main__:main"

[project.entry-points.console_scripts]
troubleshoot-mcp-server-serve = "troubleshoot_mcp_server.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = [
    # Only filter specific, targeted DeprecationWarnings that can't be fixed
    "ignore:^The event loop scope for asynchronous fixtures will default to the fixture caching scope.*:pytest_asyncio.plugin.PytestDeprecationWarning"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: unit tests that test isolated components",
    "integration: tests that involve multiple components working together",
    "e2e: end-to-end tests including external system interaction",
    "docker: tests that involve Docker functionality",
    "container: tests that involve running the MCP server in a container",
    "quick: quick tests for basic functionality verification",
    "slow: slow tests that take a long time to run"
]
# Default timeout for all tests
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py313"
# Exclude specific modules or use per-file rules as needed
exclude = [
    "tests/fixtures/mock_sbctl.py",
    "tests/fixtures/mock_kubectl.py"
]


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "types-psutil>=7.0.0.20250601",
]
